0.14.0
 - feat: support new DCOR API for uploading data directly to S3
 - enh: add api.errors.APIBadRequest error class
 - setup: bump dclab from 0.57.0 to 0.58.2
0.13.3
 - setup: bump dclab from 0.55.7 to 0.57.0
0.13.2
 - setup: bump dclab from 0.52.0 to 0.55.7
0.13.1
 - fix: handle not-found-errors for non-existent resource downloads
 - ref: replace setuptools pkg_resources with importlib.resources
0.13.0
 - setup: drop support for Python 3.9
 - ci: migrate from appveyor to GitHub Actions
0.12.9
 - fix: twisted error message upon SHA-256 upload verification (#73)
 - fix: user_show raised unexpected APINotFoundError in wizard
 - fix: support None as empty API key
 - fix: explain to user how to create API token, since CKAN 2.10 does
   not support automatic generation of API keys anymore
 - fix: workaround for broken CKAN logic in user_show
 - enh: skip SSL verification via DCORAID_SKIP_SSL_VERIFY environment variable
 - enh: add ``__repr__`` for ``CKANAPI``
 - ref: introduce `CKANAPI.ckan_version_object` fetching the CKAN version
0.12.8:
 - fix: set row count to zero when all jobs are removed from upload queue
 - enh: increase buffer size for uploads to 4MB
0.12.7
 - setup: bump requests to 2.31.0 (CVE-2023-32681)
 - setup: bump dclab from 0.50.2 to 0.52.0
0.12.6
 - fix: properly propagate SystemExit exit codes
0.12.5
 - fix: make CACHE_DIR an optional argument to dclab-upload-task
0.12.4
 - fix: error message in preferences user tab no connection available
 - enh: allow to select upload cache directory in CLI
 - enh: allow to select upload cache directory in GUI
 - enh: make sure temporary cache directories for uploads are removed
 - enh: replace lru_cache with weak_lru_cache for instance methods
 - setup: bump dclab from 0.49.0 to 0.50.2
 - setup: bump urllib3 to 2.0
 - setup: bump requests_toolbelt to 1.0
0.12.3
 - setup: bump dclab from 0.48.4 to 0.49.0 (support tables)
0.12.2
 - setup: stop pinning dclab version
0.12.1