@@ -2,7 +2,7 @@
 from .ckan_api import CKANAPI
 from .dataset import (dataset_create, dataset_activate, dataset_draft_remove,
                       dataset_draft_remove_all)
-from .dataset import resource_add, resource_exists, resource_sha256_sums
+from .dataset import resource_add, resource_exists
 from .errors import (APIError, APIBadGatewayError, APIConflictError,
                      APIAuthorizationError, NoAPIKeyError, APINotFoundError,
                      APIGatewayTimeoutError, APIOutdatedError)
